--- a/themes/custom/entyviohcp/templates/page.html.twig
+++ b/themes/custom/entyviohcp/templates/page.html.twig
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="flex-container">
           <p class="description">See how we are providing support for your patients during CORONAVIRUS (COVID‑19)</p>
-          <a href="/covid19" class="btn btn-primary">LEARN MORE</a>
+          <a href="{{ base_path }}covid19" class="btn btn-primary">LEARN MORE</a>
         </div>
       </div>
     </div>
@@ -35,7 +35,7 @@
           <ul>
           <li class="active"><a href="{{ url('<front>') }}/" title="Home" target="_self">Home</a></li>
           <li class="has-submenu clinicalefficacy">
-            <a href="/clinical-efficacy/ulcerative-colitis/gemini-trial" aria-haspopup="true" aria-expanded="false" target="_self"><span>Clinical <br data-only="desktop">Efficacy</span></a>
+            <a href="{{ base_path }}clinical-efficacy/ulcerative-colitis/gemini-trial" aria-haspopup="true" aria-expanded="false" target="_self"><span>Clinical <br data-only="desktop">Efficacy</span></a>
             <button  class="icon-trigger">
               <i class="fa fa-angle-down"></i>
             </button>
@@ -136,7 +136,7 @@
               <li><a data-modal="external" data-animation="slide" href="https://www.takeda.com/en-us/terms-of-use" target="_blank" rel="noreferrer">Terms of Use</a></li>
               <li><a data-modal="external" data-animation="slide" href="https://www.takeda.com/privacy-notice/" target="_blank" rel="noreferrer">Privacy Notice</a></li>
               <li><a data-modal="external" data-animation="slide" href="https://www.takeda.com/en-us/who-we-are/contact-us" target="_blank" rel="noreferrer">Contact Us</a></li>
-              <li class=""><a href="/sitemap" target="_self">Site Map</a></li>
+              <li class=""><a href="{{ base_path }}sitemap" target="_self">Site Map</a></li>
             </ul>
             <ul>
               <li><a data-modal="external" data-animation="slide" href="https://www.takedahcp.com/unsubscribe/enrx" target="_blank" rel="noreferrer">Unsubscribe</a></li>
