--- a/themes/custom/entyviohcp/templates/content/node--gemini-i-entyvio-vs-placebo--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--gemini-i-entyvio-vs-placebo--full.html.twig
@@ -394,7 +394,7 @@
                     <div class="cta-container" data-row="">
                         <div class="cta-1 cta" data-col="mobile-12 desktop-6">
                             <p>Entyvio vs. Humira<sup>®</sup>&nbsp;<span class="generic">(adalimumab)</span> Data</p>
-                            <a href="/clinical-efficacy/ulcerative-colitis/varsity-trial" class="btn btn-secondary">SEE VARSITY STUDY RESULTS</a>
+                            <a href="{{ base_path }}clinical-efficacy/ulcerative-colitis/varsity-trial" class="btn btn-secondary">SEE VARSITY STUDY RESULTS</a>
                             <p class="footnote">
                                 Humira<sup>®</sup> (AbbVie Inc. North Chicago, IL).<br>
                                 For more information related to Humira, please see AbbVie.com.
@@ -402,7 +402,7 @@
                         </div>
                         <div class="cta-2 cta" data-col="mobile-12 desktop-6">
                             <p>Entyvio Safety Profile</p>
-                            <a href="/safety-profile" class="btn btn-secondary">VIEW SAFETY PROFILE</a>
+                            <a href="{{ base_path }}safety-profile" class="btn btn-secondary">VIEW SAFETY PROFILE</a>
                         </div>
                     </div>
                 </div>
