--- a/themes/custom/entyviohcp/templates/content/node--varsity-ulcerative-colitis-clini--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--varsity-ulcerative-colitis-clini--full.html.twig
@@ -573,7 +573,7 @@
                         </picture>
                     </figure>
                     <div class="btn-container">
-                        <a href="/clinical-efficacy/ulcerative-colitis/gemini-trial" class="btn btn-secondary">VIEW GEMINI I: ENTYVIO VS. PLACEBO CLINICAL DATA</a>
+                        <a href="{{ base_path }}clinical-efficacy/ulcerative-colitis/gemini-trial" class="btn btn-secondary">VIEW GEMINI I: ENTYVIO VS. PLACEBO CLINICAL DATA</a>
                     </div>
                     <p class="footnote">
                         <span class="ref">*</span>
@@ -619,7 +619,7 @@
                         </ul>
                     </ul>
                     <div class="btn-container">
-                        <a href="/clinical-efficacy/ulcerative-colitis/gemini-trial#study-design" class="btn btn-secondary">VIEW GEMINI I STUDY DESIGN</a>
+                        <a href="{{ base_path }}clinical-efficacy/ulcerative-colitis/gemini-trial#study-design" class="btn btn-secondary">VIEW GEMINI I STUDY DESIGN</a>
                     </div>
                     <p class="footnote acronyms">
                         <span class="text">PML = progressive multifocal leukoencephalopathy.</span>
@@ -630,11 +630,11 @@
                 <div class="cta-container" data-row="">
                     <div class="cta-1 cta" data-col="mobile-12 desktop-6">
                         <p>GEMINI I Data: UC Trials I and II</p>
-                        <a href="/clinical-efficacy/ulcerative-colitis/gemini-trial" class="btn btn-secondary">SEE THE DATA</a>
+                        <a href="{{ base_path }}clinical-efficacy/ulcerative-colitis/gemini-trial" class="btn btn-secondary">SEE THE DATA</a>
                     </div>
                     <div class="cta-2 cta" data-col="mobile-12 desktop-6">
                         <p>Entyvio Safety Profile</p>
-                        <a href="/safety-profile" class="btn btn-secondary">VIEW SAFETY PROFILE</a>
+                        <a href="{{ base_path }}safety-profile" class="btn btn-secondary">VIEW SAFETY PROFILE</a>
                     </div>
                 </div>
             </div>
