--- a/themes/custom/entyviohcp/templates/content/node--varsity-ulcerative-colitis-clini--full.html.twig
+++ b/themes/custom/entyviohcp/templates/content/node--varsity-ulcerative-colitis-clini--full.html.twig
@@ -204,8 +204,8 @@
                 <div class="container">
                     <div class="accordion-container">
                         <!-- ACCORDION STARTS -->
-                        <div class="accordion">
-                            <div class="accordion-list">
+                        <div class="accordion" data-accordion-type="">
+                            <div class="accordion-list" >
                                 <ul class="accordion-controls">
                                     <li class="active">
                                         <button id="humira_trigger_id_1" aria-controls="humira_content_id_1" aria-expanded="true">
@@ -287,7 +287,7 @@
                 <div class="container week-52">
                     <div class="accordion-container">
                         <!-- ACCORDION STARTS -->
-                        <div class="accordion">
+                        <div class="accordion" >
                             <div class="accordion-list">
                                 <ul class="accordion-controls">
                                     <li class="active">
