--- a/themes/custom/entyviohcp/css/all.css
+++ b/themes/custom/entyviohcp/css/all.css
@@ -967,6 +967,7 @@ table tbody td {
 #page-content {
     margin: auto;
     max-width: 1920px;
+    overflow: hidden;
 }
 @media screen and (min-width: 960px) and (max-width: 9999px) {
     #page-content {
